--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -1,6 +1,13 @@
 ---
 title: "API"
 ---
+### À La Carte Ordering (Sep 2024)
+Vital now supports ordering à-la-carte, as well as a revamped ordering flow.
+<Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
+Check out the [Ordering](/lab/workflow/ordering) documentation.
+
+</Accordion>
+
 ### Partial Results Webhook (Jul 2024)
 Vital now supports sending webhooks for partial results, on a team-by-team configuration.
 <Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
