--- a/docs/event-catalog/labtest.order.created.mdx
+++ b/docs/event-catalog/labtest.order.created.mdx
@@ -95,7 +95,7 @@ The Vital Test associated with the order
 <ResponseField name="name" type="string" required="true">
 </ResponseField>
 <ResponseField name="sample_type" type="enum<string>" required="true">
-Available options: `dried_blood_spot`, `serum`, `saliva`, `urine`.
+Available options: `dried_blood_spot`, `arm_collector`, `serum`, `saliva`, `urine`.
 </ResponseField>
 <ResponseField name="method" type="enum<string>" required="true">
 Available options: `testkit`, `walk_in_test`, `at_home_phlebotomy`.
@@ -428,8 +428,8 @@ Any of:
         "status": "collecting_sample.testkit.transit_customer"
       }
     ],
-    "health_insurace_id": "f24a354f-7915-4902-8736-1d2b5164c011",
-    "id": "e734ac4f-56e2-4a3d-8612-8cef62956f91",
+    "health_insurace_id": "a454188e-23f5-4cf3-b0c4-f6105c707970",
+    "id": "b00b1dc8-302c-4cee-8cfc-cdcaa27b24de",
     "lab_test": {
       "description": "Cholesterol test",
       "method": "testkit",
@@ -453,9 +453,9 @@ Any of:
     "requisition_form_url": "https://www.example.com",
     "sample_id": "123456789",
     "status": "collecting_sample",
-    "team_id": "381b93ab-a7dd-4313-9cdd-4db1431095d7",
+    "team_id": "bb27dd9e-3dfe-40b3-86df-38a0909eef31",
     "updated_at": "2020-01-01T00:00:00Z",
-    "user_id": "ab73fc3e-35b9-419d-95da-9d2d17af9cb6"
+    "user_id": "7c30b9e5-4c82-4c1b-a48d-abb7e245019e"
   },
   "event_type": "labtest.order.created",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
