--- a/docs/wearables/guides/apple-healthkit.mdx
+++ b/docs/wearables/guides/apple-healthkit.mdx
@@ -24,12 +24,57 @@ schedule. The hourly schedule is advisory and non-binding from the persective of
 can therefore fluctuate from hourly, to once a day, or when certain opportunity arises (e.g., when Sleep Mode ends,
 or when the phone starts charging).
 
+## Getting Started
 
-## Background Delivery
+To enable this integration, you would need to integrate [Vital Core SDK](/wearables/sdks/vital-core) and
+[Vital Health SDK](/wearables/sdks/vital-core) into your Native iOS, React Native or Flutter mobile app.
+
+<Steps>
+
+<Step title="Add Vital SDKs as dependencies">
+Review the [installation requirements and package installation instructions](/wearables/sdks/installation).
+</Step>
+
+<Step title="Integrate with Vital Mobile SDK Authentication">
+Follow the [SDK Authentication](/wearables/sdks/authentication) guidance to integrate your app with the authentication
+mechanism of Vital Core SDK.
+</Step>
+
+<Step title="Configure Health SDK and ask user for read permissions">
+Follow the [Vital Health SDK](/wearables/sdks/vital-health) guidance to
+[configure your App Delegate](/wearables/sdks/vital-health#configure-your-app-delegate-ios-only), 
+[configure the Health SDK](/wearables/sdks/vital-health#sdk-configuration) and to 
+[ask for health data read permissions](/wearables/sdks/vital-health#ask-user-for-health-data-permissions) from your user.
+
+<Note>
+Health data sync is activated only on `VitalResource`s which you have asked permissions from your user for. If you
+did not ask for permissions, data sync would not occur.
+</Note>
+</Step>
+
+<Step title="Configure Background Delivery">
+Follow the [Apple HealthKit Background Delivery guidance](#setting-up-apple-healthkit-background-delivery) below to
+setup your iOS app target as an eligible target for Apple HealthKit Background Delivery.
+</Step>
+
+</Steps>
 
 
-The iOS SDK can support observing new HealthKit data even when your app is not actively being used by your app user.
-This provides a more seamless experience, since the app user need not periodically open your app to sync data.
+## Setting up Apple HealthKit Background Delivery
+
+
+Vital Health SDK can subscribe to Apple HealthKit Background Delivery, so that data sync can happen automatically in
+background. The subscription persists even when:
+
+1. Your app user does not open your app regularly;
+2. Your app user forces quit your app; or
+3. The iPhone has been restarted for any reason.
+
+
+<Note>
+Enabling Apple HealthKit will attract additional scrutiny in the App Store Review process. You should be prepared
+to explain and demonstrate your usage of these health and fitness data.
+</Note>
 
 ### 1. Setup app entitlements 
 
@@ -58,59 +103,6 @@ If you request write permissions, you must also specify:
 | ----- | ------ |
 | Privacy - Health Update Usage Description<br />(`NSHealthUpdateUsageDescription`) | An explanation of what user health data your app is writing to Apple HealthKit. |
 
-
-### 3. Integrate with iOS system callbacks
-
-You must call `VitalHealthKitClient.automaticConfiguration()` during `application(_:didFinishLaunchingWithOptions:)` of your UIKit `UIApplicationDelegate`.
-This applies to all iOS integrations, be it Native, React Native or Flutter.
-
-This ensures that Vital has the opportunity to register all handlers before the app "finished launching" as per Apple HealthKit's specific timing requirement.
-Background delivery may be missed if this timing requirement is not satisfied.
-
-<Warning>
-
-As per the [documentation](https://developer.apple.com/documentation/healthkit/hkhealthstore/1614175-enablebackgrounddelivery):
-
-> As soon as your app launches, HealthKit calls the update handler for any observer queries that match the newly saved data. If you plan on supporting background delivery, set up all your observer queries in your app delegate’s application(_:didFinishLaunchingWithOptions:) method. By setting up the queries in `application(_:didFinishLaunchingWithOptions:)`, you ensure that you’ve instantiated your queries, and they’re ready to use before HealthKit delivers the updates.
-
-In other words, make sure `VitalHealthKitClient.automaticConfiguration()` is called inside your UIKit App Delegate's `application(_:didFinishLaunchingWithOptions:)` method. 
-
-For React Native and Flutter SDK consumers, this means you must configure this directly in native code (Swift / Objective-C). Typically, an App Delegate would have
-been already created as part of your generated React Native or Flutter Xcode project.
-
-</Warning>
-
-
-Your `AppDelegate` should then look like this:
-
-Swift / Flutter iOS:
-```swift
-import VitalHealthKit
-
-class AppDelegate: NSObject, UIApplicationDelegate {
-  func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey : Any]? = nil) -> Bool {
-
-    VitalHealthKitClient.automaticConfiguration()
-    /// your code
-
-    return true
-  }
-}
-```
-
-Objective-C / React Native iOS:
-```swift
-#import "AppDelegate.h"
-#import "VitalHealthKitConfiguration.h"
-
-- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
-
-  [VitalHealthKitConfiguration automaticConfiguration];
-  /// your code
-
-  return YES;
-}
-```
 
 ### 3. Epilogue
 
