--- a/docs/lab/results/result-formats.mdx
+++ b/docs/lab/results/result-formats.mdx
@@ -225,13 +225,14 @@ This data has the following format:
 ```python
 name: str
 slug: str
-reason: FailureType
+inferred_failure_type: FailureType
+note: str | None = None
 loinc: str | None = None
 loinc_slug: str | None = None
 provider_id: str | None = None
 ```
 
-`reason` is the Vital assigned error type.
+`inferred_failure_type` is the Vital assigned error type.
 The error type is inferred from the comments received from the lab. They are to help assess possibly root causes of missing results, and aid the customer in identifying issues in aggregate. The way that we infer these error types is subject to change as we continue to refine and achieve more granular understanding of failure modes.
 
 1. `quantity_not_sufficient_failure`
