--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -1,6 +1,11 @@
 ---
 title: "API"
 ---
+### Phlebotomy Availability API - Start Date Query (Sep 2024)
+You can now supply a `start_date` to the [Appointment Availability API](/api-reference/lab-testing/at-home-phlebotomy/appointment-availability).
+The API always responds with 14 days worth of slots.
+
+
 ### À La Carte Ordering (Sep 2024)
 Vital now supports ordering à-la-carte, as well as a revamped ordering flow.
 <Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
