--- a/docs/home/privacy.mdx
+++ b/docs/home/privacy.mdx
@@ -15,7 +15,7 @@ To do this we've taken a number of precautions:
 
 When we pull data from various wearable provider's this data goes through the Evervault encryption proxy - which encrypts the data before we store it.
 
-<imf src="/img/storing.png" alt="storing" />{" "}
+<img src="/img/storing.png" alt="storing" />{" "}
 
 ### Retrieving Data
 
