--- a/docs/wearables/sdks/vital-health.mdx
+++ b/docs/wearables/sdks/vital-health.mdx
@@ -204,13 +204,103 @@ await vital_health.askForPermission(readResources, []);
 ```
 </CodeGroup>
 
-Note that the operating system only prompts the end user once for each resource type. Subsequent requests are
-gracefully ignored by the OS.
+Regardless of whether the user has granted or denied the permissions, any subsequent re-request would
+be non-interactive and returns instantly. This is because the operating system only prompts the end user
+once for each resource type.
+
+If you wish
+to provide a way for users to review their permission grants or denials, you can
+[inform them of the system app location where they can do so](#check-if-a-read-permission-was-granted-or-denied-spoiler-you-cant).
 
 <Warning>
 The health data read permission prompted is managed by the operating system. Vital cannot customize or
 alter its behaviour.
 </Warning>
+
+## Check if your app has asked for permissions before
+
+You can check if your app has already asked the user _at least once_ before, for permissions on a specific `VitalResource`.
+
+If your app has already did, any further attempt to [Ask for Permission](#ask-user-for-health-data-permissions) would
+be gracefully ignored by the operating system.
+
+The only exception to this behaviour is when a `VitalResource` pulls a new data type introduced in a new OS release.
+In this scenario, calling [Ask for Permission](#ask-user-for-health-data-permissions) would result in a permission
+prompt that asks for permissions to read these new data types.
+
+If you wish
+to provide a way for users to review their permission grants or denials, you can
+[inform them of the system app location where they can do so](#check-if-a-read-permission-was-granted-or-denied-spoiler-you-cant).
+
+
+<CodeGroup>
+```swift Native iOS
+import VitalHealthKit
+
+VitalHealthKitClient.shared.hasAskedForPermission(resource: .activity)
+```
+
+```kotlin Native Android
+import io.tryvital.vitalhealthconnect.VitalHealthConnectManager
+
+val manager = VitalHealthConnectManager.configure(context)
+manager.hasAskedForPermission(VitalResource.Activity)
+```
+
+```typescript React Native
+import { VitalHealth, VitalResource } from "@tryvital/vital-health-react-native";
+
+await VitalHealth.hasAskedForPermission(VitalResource.Activity);
+```
+
+```dart Flutter
+import 'package:vital_health/vital_health.dart' as vital_health;
+
+await vital_health.hasAskedForPermission(vital_health.HealthResource.Activity);
+```
+</CodeGroup>
+
+
+## Check if a read permission was granted or denied (⚠️ Spoiler: You can't)
+
+Vital Health SDK allows you to [ask for permission](#ask-user-for-health-data-permissions) and
+[check if your app has asked for permission before](#check-if-your-app-has-asked-for-permissions-before).
+
+However, Vital Health SDK **cannot** tell you:
+
+1. Whether or not a user has granted or denied a read permission after the [Ask for Permission](#ask-user-for-health-data-permissions) has concluded.
+1. The state of a read permission at any exact moment — granted or denied.
+
+Apple made a deliberate choice to conceal the state of HealthKit data type read permissions from third-party apps.
+Quoting [Apple's own words](https://developer.apple.com/documentation/healthkit/hkhealthstore/1614154-authorizationstatus) (as at 27 September 2024):
+
+> To help prevent possible leaks of sensitive health information, your app cannot determine whether or not a user has granted permission to read data.
+>
+> If you are not given permission, it simply appears as if there is no data of the requested type in the HealthKit store.
+>
+> [...]
+
+In other words, all third-party apps — including anyone using the Vital Health SDK — would:
+
+1. not be able to determine if a particular read permission has been granted or denied by the user;
+
+2. not be able to manage or review read permissions inside their app.
+
+The best course of action out of this is to inform your users of the location where they can review and manage their health data read permissions:
+
+| Operating System     | System App         | Location |
+| -------------------- | ------------------ | -------- |
+| iOS 8.0 and above    | Health app         | Sharing > Apps and Services |
+| iOS 15.0 and above   | Settings app       | Privacy & Security > Health |
+| Android 13 or below  | Health Connect app | Apps and Permissions |
+| Android 14 and above | Settings app       | Health Connect > Apps and Permissions |
+
+<Note>
+
+When designing your user experience, **do not assume** you can re-engage the end user after the
+[Ask for Permission](#ask-user-for-health-data-permissions) based on permission grants and denials.
+
+</Note>
 
 ## Automatic Data Sync
 
