Update Event Catalog from 72d168c3f6d468d9030d2bea8f930834e9e435f3

--- a/docs/event-catalog/labtest.appointment.updated.mdx
+++ b/docs/event-catalog/labtest.appointment.updated.mdx
@@ -69,10 +69,10 @@ Any of:
 * null
 </ResponseField>
 <ResponseField name="type" type="enum<string>" required="true">
-Available options: `phlebotomy`.
+Available options: `phlebotomy`, `patient_service_center`.
 </ResponseField>
 <ResponseField name="provider" type="enum<string>" required="true">
-Available options: `getlabs`, `axlehealth`, `phlebfinders`.
+Available options: `getlabs`, `axlehealth`, `phlebfinders`, `quest`.
 </ResponseField>
 <ResponseField name="status" type="enum<string>" required="true">
 Available options: `confirmed`, `pending`, `in_progress`, `completed`, `cancelled`.
@@ -137,18 +137,18 @@ Any of:
       }
     ],
     "iana_timezone": "America/New_York",
-    "id": "3163cadf-ad31-4f03-be79-7409e68caea1",
+    "id": "551252a3-3205-48d6-8cee-d52f9c8b1313",
     "location": {
       "lat": 37.7749295,
       "lng": -122.4194155
     },
-    "order_id": "ca6756e6-fa1c-4848-9649-a038dac06615",
+    "order_id": "ae8d5f4c-5ff6-43cf-ad5b-07a56b70a73e",
     "provider": "getlabs",
     "provider_id": "123",
     "start_at": "2022-01-01T00:00:00",
     "status": "confirmed",
     "type": "phlebotomy",
-    "user_id": "c5bcaaf1-071b-4fec-8797-431d61051355"
+    "user_id": "f783c861-687a-4693-99e7-01f11bdfe20a"
   },
   "event_type": "labtest.appointment.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
