Add PSC appointment docs

--- a/docs/lab/walk-in/locations.mdx
+++ b/docs/lab/walk-in/locations.mdx
@@ -1,6 +1,8 @@
 ---
-title: "Patient Service Centers"
+title: "Patient Service Centers and Appointments"
 ---
+
+# Finding nearest serviceable Patient Service Centers
 
 Verifying if a particular zip code is serviceable is an important step, as not all labs have patient service centers within a state or within a reasonable distance.
 
@@ -45,3 +47,9 @@ If specific data regarding the PSC's is required, then you can also query the [`
   ]
 }
 ```
+
+# Booking appointments at Patient Service Centers
+
+
+Vital allows booking of appointments directly with the Patient Service Centers for some labs. In order to book these appointments, you can use the [PSC Appointment API](/api-reference/lab-testing/psc-schedulling/appointment-psc-availability).
+
