--- a/docs/lab/overview/insurance.mdx
+++ b/docs/lab/overview/insurance.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Insurance Ordering"
+version: beta
 ---
 
 Vital supports ordering with commercial insurance billing. To set this up, there are a set of steps required. This document explains the complete flow for ordering via commercial insurance.
