--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -78,6 +78,9 @@ Below is a full list of all the available statuses by test modality. The names s
 
 - `received.walk_in_test.ordered`
 - `received.walk_in_test.requisition_created`
+- `collecting_sample.walk_in_test.appointment_pending`
+- `collecting_sample.walk_in_test.appointment_scheduled`
+- `collecting_sample.walk_in_test.appointment_cancelled`
 - `sample_with_lab.walk_in_test.partial_results`
 - `completed.walk_in_test.completed`
 - `failed.walk_in_test.sample_error`
@@ -87,6 +90,7 @@ Below is a full list of all the available statuses by test modality. The names s
 
 - `received.at_home_phlebotomy.ordered`
 - `received.at_home_phlebotomy.requisition_created`
+- `collecting_sample.at_home_phlebotomy.appointment_pending`
 - `collecting_sample.at_home_phlebotomy.appointment_scheduled`
 - `collecting_sample.at_home_phlebotomy.draw_completed`
 - `collecting_sample.at_home_phlebotomy.appointment_cancelled`
