--- a/docs/lab/walk-in/locations.mdx
+++ b/docs/lab/walk-in/locations.mdx
@@ -43,6 +43,7 @@ If specific data regarding the PSC's is required, then you can also query the [`
         "hours": null
       },
       "distance": "25",
+      "site_code": "ABC",
     },
   ]
 }
@@ -53,3 +54,12 @@ If specific data regarding the PSC's is required, then you can also query the [`
 
 Vital allows booking of appointments directly with the Patient Service Centers for some labs. In order to book these appointments, you can use the [PSC Appointment API](/api-reference/lab-testing/psc-schedulling/appointment-psc-availability).
 
+
+## Appointment Availability
+
+You can use the [availability API](/api-reference/lab-testing/psc-schedulling/appointment-psc-availability) to obtain the available slots. You can feed in the `site_code` you obtain from the [`GET /v3/order/psc/info`](/api-reference/lab-testing/psc-info) endpoint, or supply a zip code directly. If you provider a zip code, a max of 3 PSC locations will be displayed.
+
+
+## Booking
+
+You can [book](/api-reference/lab-testing/psc-schedulling/appointment-psc-booking), [reschedule](/api-reference/lab-testing/psc-schedulling/appointment-psc-rescheduling) or [cancel](/api-reference/lab-testing/psc-schedulling/appointment-psc-cancelling) with Vital, as many times as you want.
