--- a/docs/wearables/connecting-providers/launching_link.mdx
+++ b/docs/wearables/connecting-providers/launching_link.mdx
@@ -18,7 +18,7 @@ To do so, you just pass in the provider name as one of the parameter's to the li
 
 <br />
 
-<SnippetGroup>
+<CodeGroup>
 
 ```javascript Node
 import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
@@ -104,7 +104,7 @@ curl --request POST \
      --header 'x-vital-api-key: <API-KEY>'
 ```
 
-</SnippetGroup>
+</CodeGroup>
 <br />
 </Step>
 
