--- a/docs/lab/workflow/ordering.mdx
+++ b/docs/lab/workflow/ordering.mdx
@@ -33,7 +33,7 @@ There are multiple combinations allowed with this field, so let's explore all of
 
 When ordering from **one** previously created _Lab Test_, the `order_set` field should be populated as follows:
 
-<SnippetGroup>
+<CodeGroup>
 
 ```python Python
 from vital.client import Vital
@@ -51,13 +51,13 @@ client.lab_tests.create_order(
         ...
 )
 ```
-</SnippetGroup>
+</CodeGroup>
 
 ### Ordering from multiple _Lab Tests_
 
 You may want to combine two or more existing Lab Tests without creating a new one. This is possible by doing:
 
-<SnippetGroup>
+<CodeGroup>
 
 ```python Python
 from vital.client import Vital
@@ -75,7 +75,7 @@ client.lab_tests.create_order(
         ...
 )
 ```
-</SnippetGroup>
+</CodeGroup>
 
 ### Ordering without a _Lab Test_ 
 
@@ -87,7 +87,7 @@ This is a team level configuration that must be requested from Vital. Not all ma
 
 It is possible to order `a-la-carte` using Vital `marker_ids` or the lab's `provider_id`.
 
-<SnippetGroup>
+<CodeGroup>
 
 ```python Python
 from vital.client import Vital
@@ -109,13 +109,13 @@ client.lab_tests.create_order(
         ...
 )
 ```
-</SnippetGroup>
+</CodeGroup>
 
 ### Order _Lab Tests_ with extra _Markers_
 
 You may also add extra **markers** to an order. For example, you want to order the `Labcorp Lipid Panel and Vitamin D` but for this particular patient, you also want to order a `CBC Panel`.
 
-<SnippetGroup>
+<CodeGroup>
 
 ```python Python
 from vital.client import Vital
@@ -138,7 +138,7 @@ client.lab_tests.create_order(
         ...
 )
 ```
-</SnippetGroup>
+</CodeGroup>
 
 <Note>
 When supplying the `add_on` field, it is always required to provide the `collection_method` field.
@@ -151,7 +151,7 @@ Further explored in the documentation, Vital also has the concept of _Collection
 When ordering, you must select one of these, either at lab test creation, or at ordering time.
 
 
-<SnippetGroup>
+<CodeGroup>
 
 ```python Python
 from vital.client import Vital
@@ -170,13 +170,13 @@ client.lab_tests.create_order(
         ...
 )
 ```
-</SnippetGroup>
+</CodeGroup>
 
 ## À La Carte Markers
 
 As mentioned above, not all `markers` are `a la carte` orderable. You can find which one's are orderable via the [GET /v3/lab_tests/markers](/api-reference/lab-testing/biomarkers).
 
-<SnippetGroup>
+<CodeGroup>
 
 ```python Python
 from vital.client import Vital
@@ -195,7 +195,7 @@ markers = client.lab_tests.get_markers(
 if not all([m.a_la_carte_enabled for m in markers.markers]):
     raise Exception("Markers not a_la_carte_enabled")
 ```
-</SnippetGroup>
+</CodeGroup>
 
 
 
