--- a/docs/wearables/connecting-providers/auth_types.mdx
+++ b/docs/wearables/connecting-providers/auth_types.mdx
@@ -35,7 +35,7 @@ Current OAuth providers are:
 
 To connect an oauth provider:
 
-<SnippetGroup>
+<CodeGroup>
 
 ```javascript Node
 import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
@@ -143,7 +143,7 @@ if err != nil {
 fmt.Printf("Received data %s\n", oauth)
 ```
 
-</SnippetGroup>
+</CodeGroup>
 
 For `OAuth` Providers we return an `oauth_url` that can be used to redirect users to. In a web view, on redirection, you should check the user has connected to the provider successfully. In the case of mobile, the user should receive a message to return to the app.
 
@@ -180,7 +180,7 @@ Current email and password providers are:
 
 To connect a email and password provider:
 
-<SnippetGroup>
+<CodeGroup>
 
 ```javascript Node
 import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
@@ -259,4 +259,4 @@ if err != nil {
 fmt.Printf("Received data %s\n", response)
 ```
 
-</SnippetGroup>
+</CodeGroup>
